# dual_arm_workcell

./: .gitignore  README.md
Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit.launch.py
Universal_Robots_ROS2_Driver/ur_robot_driver/launch/: frames_2025-11-17_14.18.29.gv
apriltag_grid_detector/: setup.py
apriltag_grid_detector/apriltag_grid_detector/: apriltag_grid_detector.py
apriltag_grid_detector/launch/: apriltag_grid_detector.launch.py
dual_arm_workcell_bringup/: package.xml
dual_arm_workcell_bringup/launch/: dual_arm_workcell_bringup.launch.py  launch_servers_single_ur.launch.py  left_camera_left_wrist_3_link_calibration.launch.py  right_camera_right_wrist_3_link_calibration.launch.py
dual_arm_workcell_driver/: package.xml
dual_arm_workcell_driver/launch/: dual_arm_workcell_control.launch.py
dual_arm_workcell_moveit_config/: package.xml
dual_arm_workcell_moveit_config/config/: dual_arm_workcell.srdf  left_ur_servo.yaml  right_ur_servo.yaml
dual_arm_workcell_moveit_config/launch/: dual_arm_workcell_moveit.launch.py
motion_planning_abstractions/: CMakeLists.txt  package.xml
motion_planning_abstractions/launch/: launch_servers.launch.py
motion_planning_abstractions/scripts/: delta_twist_cmds.py
motion_planning_abstractions/src/: pick_and_place_ft_feedback_server.cpp  pick_and_place_local_perception_server.cpp  pick_and_place_server.cpp  pid_angular_velocity.hpp  pose_tracker.cpp  predefined_state_server.cpp
rosbag_to_mp4/: CMakeLists.txt  package.xml
rosbag_to_mp4/scripts/: Image_stream_to_mp4.py  commands_buffer.txt
